<resources>
    <string-array name="menu">
        <item>Setup</item>
        <item>Help</item>
    </string-array>
    <string name="invalid_in">Entrada inválida</string>
    <string name="error_loading_image">Erro ao carregar imagem</string>
    <string name="unknown_error">Ocorreu algum erro</string>
    <string name="processing">Carregando...</string>
    <string name="loading_number">Carregando\n .....</string>
    <string name="login_fail">Falha no login</string>
    <string name="email_password_invalid">Email ou senha inválidos</string>
    <string name="information">Informações</string>
    <string name="deleting">Deletando</string>
    <string name="check_all">Checar tudo</string>
    <string name="menu_delete">Deletar</string>
    <string name="app_name">Sistrânsito</string>
    <string name="folder_app">SistransitoMobile</string>
    <string name="menu_config">Configurações</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">logo</string>
    <string name="license_plate_letters">Letras da placa</string>
    <string name="plate_numbers">Números da placa</string>
    <string name="chassi_field">Informe o número do chassi com 17 caracteres</string>
    <string name="plate_mercosul_field">Informe o número da placa no padrão Mercosul</string>
    <string name="vis_field">Informe o número do VIS</string>
    <string name="seal_field">Informe o número do lacre</string>
    <string name="engine_field">Informe o número do motor</string>
    <string name="plate_letter_error_message">Insira 3 letras para a placa</string>
    <string name="error_message_plate_number">Insira 4 números para a placa</string>
    <string name="invalid_typing">Entrada inválida</string>
    <string name="cnh_data">Insira os dados da CNH</string>
    <string name="name_owner_cnh_ppd">Nome ou CPF da CNH</string>
    <string name="cpf_driver_cnh_ppd">Informe o CPF do condutor</string>
    <string name="driver_name_cnh_ppd">Informe o nome do condutor</string>
    <string name="name_mother_cnh_ppd">Informe o nome da mãe do condutor</string>
    <string name="birth_condutor_cnh_ppd">Informe data de nascimento do condutor</string>
    <string name="cnh_register">CNH</string>
    <string name="cnh_driver_rg">RG</string>
    <string name="cpf_driver">CPF</string>
    <string name="cnh_name_driver">Nome</string>
    <string name="cnh_mother_driver">Nome da mãe</string>
    <string name="date_birth_driver">Data de nascimento</string>
    <string name="permission_denied">Permissão negada</string>
    <string name="nature_format">Natureza</string>
    <string name="points_format">Pontuação</string>
    <string name="value_format">Valor</string>
    <string name="responsible_format">Responsável</string>
    <string name="administrative_measure_format">Medida(s) administrativa(s):&#160;</string>
    <string name="observation_format">Observações:&#160;</string>
    <string name="notes_format">Informações:&#160;</string>
    <string name="competency_format">Competência</string>
    <string name="points">pontos</string>
    <string name="coin_format">R$:&#160;</string>
    <string name="search_infraction">Pesquise infraçoes</string>
    <string name="capital_government_title">GOVERNO DO ESTADO</string>
    <string name="capital_security_department">SECRETARIA DE SEGURANÇA PÚBLICA</string>
    <string name="capital_transit_department">DEPARTAMENTO DE TRÂNSITO</string>
    <string name="capital_infraction_title">AUTO DE INFRAÇÃO DE TRÂNSITO - AIT</string>
    <string name="capital_transit_agency_code">CÓD. ÓRGÃO</string>
    <string name="capital_ait_indentification">1-IDENTIFICAÇÃO DA AUTUAÇÃO</string>
    <string name="capital_ait_vehicle_title">2-IDENTIFICAÇÃO DO VEÍCULO</string>
    <string name="capital_ait_conductor_title">3-IDENTIFICAÇÃO DO CONDUTOR</string>
    <string name="capital_ait_local_title">4-IDENTIFICAÇÃO DO LOCAL, DATA E HORA</string>
    <string name="capital_ait_infraction_title">5-TIPIFICAÇÃO DA INFRAÇÃO</string>
    <string name="capital_ait_equipment_title">EQUIPAMENTOS/INSTRUMENTOS DE AFERIÇÃO UTILIZADO</string>
    <string name="capital_ait_procedures_title">PROCEDIMENTOS</string>
    <string name="capital_ait_agent_title">6-IDENTIFICAÇÃO DA AUTORIDADE OU AGENTE AUTUADOR</string>
    <string name="capital_ait_shipper_title">7-IDENTIFICAÇÃO DO EMBARCADOR OU EXPEDIDOR</string>
    <string name="capital_ait_carrier_title">8-IDENTIFICAÇÃO DO TRANSPORTADOR</string>
    <string name="capital_number">NÚMERO</string>
    <string name="capital_vehicle_indentification">IDENTIFICAÇÃO DO VEÍCULO</string>
    <string name="capital_vehicle_plate">PLACA</string>
    <string name="capital_chassi">CHASSI</string>
    <string name="capital_brand">MARCA</string>
    <string name="capital_model">MODELO</string>
    <string name="capital_brand_model">MARCA/MODELO</string>
    <string name="capital_specie">ESPÉCIE</string>
    <string name="capital_category">CATEGORIA</string>
    <string name="capital_driver_name">CONDUTOR</string>
    <string name="capital_cnh_ppd_acc">CNH/PPD/ACC</string>
    <string name="capital_cnh_state">UF</string>
    <string name="capital_location">IDENTIFICAÇÃO DO LOCAL</string>
    <string name="capital_city_code">CÓD. MUNICÍPIO</string>
    <string name="capital_address">LOCAL</string>
    <string name="capital_country">PAIS</string>
    <string name="capital_country_acronym">BR</string>
    <string name="capital_city_state">MUNICÍPIO/UF</string>
    <string name="capital_date">DATA</string>
    <string name="capital_time">HORA</string>
    <string name="capital_administrative_measure">MEDIDA(S) ADMINISTRATIVA(S)</string>
    <string name="capital_infraction_type">TIPIFICAÇÃO DA INFRAÇÃO</string>
    <string name="capital_infraction_code">CÓD. INFRAÇÃO</string>
    <string name="capital_ait_unfolding">DESD.</string>
    <string name="capital_legal_support">AMPARO LEGAL</string>
    <string name="capital_description">DESCRIÇÃO DA INFRAÇÃO</string>
    <string name="capital_observation">OBSERVAÇÕES</string>
    <string name="capital_agent_name_title">AUTORIDADE/AGENTE AUTUADOR</string>
    <string name="capital_agent_name">NOME</string>
    <string name="capital_registration">MATRÍCULA</string>
    <string name="capital_equipment_description">DESCRIÇÃO</string>
    <string name="capital_equipment_measurement_performed">MEDIÇÃO REALIZADA</string>
    <string name="capital_equipment_regulated_value">LIMITE REGULAMENTADO</string>
    <string name="capital_equipment_value_considered">VALOR CONSIDERADO</string>
    <string name="capital_equipment_sample_number">NÚMERO DA AMOSTRA</string>
    <string name="capital_cpf_cnpj">CPF/CNPJ</string>
    <string name="plate_format">Placa :&#160;</string>
    <string name="state_format">UF :&#160;</string>
    <string name="city_name_format">Município :&#160;</string>
    <string name="renavam_format">Renavam :&#160;</string>
    <string name="chassi_format">Chassi :&#160;</string>
    <string name="brand_format">Marca :&#160;</string>
    <string name="model_format">Modelo :&#160;</string>
    <string name="color_format">Cor :&#160;</string>
    <string name="type_format">Tipo :&#160;</string>
    <string name="specie_format">Espécie :&#160;</string>
    <string name="category_format">Categoria :&#160;</string>
    <string name="model_year_format">Ano/modelo :&#160;</string>
    <string name="licensing_year_format">Ano Licenciamento :&#160;</string>
    <string name="licensing_date_format">Data Licenciamento :&#160;</string>
    <string name="licensing_format">Licenciamento :&#160;</string>
    <string name="ipva_format">IPVA :&#160;</string>
    <string name="insurance_format">Seguro :&#160;</string>
    <string name="assessment_format">Multas :&#160;</string>
    <string name="assessment_amout_format">Valor :&#160;</string>
    <string name="impediment_format">Impedimento admin. :&#160;</string>
    <string name="theft_format">Registro de furto :&#160;</string>
    <string name="restriction_format">Restrições :&#160;</string>
    <string name="date_format">Data da consulta :&#160;</string>
    <string name="engine_format">Número do motor :&#160;</string>
    <string name="seal_format">Número do lacre :&#160;</string>
    <string name="model">Modelo do veículo</string>
    <string name="brand">Marca do veículo</string>
    <string name="chassi_search">Chassi</string>
    <string name="plate_mercosul_search">Placa Mercosul</string>
    <string name="vis_search">VIS</string>
    <string name="seal_search">Lacre</string>
    <string name="engine_search">Motor</string>
    <string name="cnh_name_format">Nome :&#160;</string>
    <string name="cnh_register_format">Registro :&#160;</string>
    <string name="cnh_state_format">UF :&#160;</string>
    <string name="cnh_mother_name_format">Nome da mãe :&#160;</string>
    <string name="cnh_cpf_format">CPF :&#160;</string>
    <string name="cnh_rg_format">RG :&#160;</string>
    <string name="cnh_category_format">Categoria :&#160;</string>
    <string name="cnh_validity_format">Validade :&#160;</string>
    <string name="cnh_points_format">Pontos :&#160;</string>
    <string name="cnh_block_format">Bloqueio :&#160;</string>
    <string name="cnh_birthday_format">Data nascimento :&#160;</string>
    <string name="cnh_situation_format">Situação :&#160;</string>
    <string name="search_off_line">Consulta off-line</string>
    <string name="lets_go">Iniciar operações</string>
    <string name="login_hint">Página de login</string>
    <string name="email">Email</string>
    <string name="login_register"><b><i>Login</i></b></string>
    <string name="password">Senha</string>
    <string name="login_two">"Logar"</string>
    <string name="btn_login">"Logar"</string>
    <string name="register">Cadastrar</string>
    <string name="forget_password">Lembrar senha?</string>
    <string name="name">Nome</string>
    <string name="transit_organ">Órgão de trânsito</string>
    <string name="new_register">Assinar</string>
    <string name="cpf">CPF</string>
    <string name="register_hint">Cadastrar no sistema</string>
    <string name="register_completed">Cadastro no sistema efetuado com sucesso</string>
    <string name="register_no_completed">Erro ao cadastrar no sistema</string>
    <string name="insert_email_text">Insira seu email</string>
    <string name="insert_password_text">Insira sua senha</string>
    <string name="keep_me">Mantenha-me</string>
    <string name="chassi_number">Número do chassi</string>
    <string name="mercosul_plate_number">Placa padrão mercosul</string>
    <string name="vis_number">Número do vis</string>
    <string name="seal_number">Número do lacre</string>
    <string name="engine_number">Número do motor</string>
    <string name="capital_rrd_indentification">1- IDENTIFICAÇÃO DO RECIBO</string>
    <string name="capital_rrd_especification">2- O DOCUMENTO ABAIXO ESPECIFICADO</string>
    <string name="capital_rrd_date_collection">3- DATA DO RECOLHIMENTO</string>
    <string name="capital_responsible_for_collection">4- RESPONSÁVEL PELO RECOLHIMENTO</string>
    <string name="capital_name">NOME</string>
    <string name="capital_register_number">MATRÍCULA</string>
    <string name="capital_rrd_date">DATA</string>
    <string name="capital_rrd_time">HORA</string>
    <string name="capital_rrd_city">MUNICÍPIO</string>
    <string name="capital_rrd_state">UF</string>
    <string name="rrd_ait_number">Número AIT</string>
    <string name="rrd_number">Número RRD</string>
    <string name="rrd_get_from">Recebemos de</string>
    <string name="rrd_reason_for_collection">Motivo para recolhimento</string>
    <string name="rrd_crlv_number">Número CRLV</string>
    <string name="rrd_plate">Placa</string>
    <string name="rrd_validity">Validade</string>
    <string name="btn_search_fragment">Consultar</string>
    <string name="delete">Excluir</string>
    <string name="list_plate_consulted">Placas consultadas</string>
</resources>