<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/widght_margin_top_2"
    android:background="@color/gray_2"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_license_plate_letters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:layout_marginTop="@dimen/width_margin_top"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_character"
        android:drawablePadding="@dimen/width_padding"
        android:ems="3"
        android:hint="@string/license_plate_letters"
        android:inputType="textCapCharacters"
        android:maxLength="3"
        android:padding="@dimen/width_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/et_license_plate_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_number"
        android:drawablePadding="@dimen/width_padding"
        android:ems="3"
        android:hint="@string/plate_numbers"
        android:inputType="number"
        android:maxLength="4"
        android:padding="@dimen/width_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/et_chassi_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:layout_marginTop="@dimen/width_margin_top"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_character"
        android:drawablePadding="@dimen/width_padding"
        android:ems="10"
        android:maxLength="17"
        android:hint="@string/chassi_number"
        android:inputType="textCapCharacters"
        android:padding="@dimen/width_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/et_mercosul_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:layout_marginTop="@dimen/width_margin_top"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_character"
        android:drawablePadding="@dimen/width_padding"
        android:ems="10"
        android:maxLength="17"
        android:hint="@string/mercosul_plate_number"
        android:inputType="textCapCharacters"
        android:padding="@dimen/width_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/et_vis_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:layout_marginTop="@dimen/width_margin_top"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_character"
        android:drawablePadding="@dimen/width_padding"
        android:ems="10"
        android:maxLength="17"
        android:hint="@string/vis_number"
        android:inputType="textCapCharacters"
        android:padding="@dimen/width_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/et_seal_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:layout_marginTop="@dimen/width_margin_top"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_character"
        android:drawablePadding="@dimen/width_padding"
        android:ems="10"
        android:hint="@string/seal_number"
        android:inputType="textCapCharacters"
        android:padding="@dimen/width_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/et_engine_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:layout_marginTop="@dimen/width_margin_top"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_character"
        android:drawablePadding="@dimen/width_padding"
        android:ems="10"
        android:hint="@string/engine_number"
        android:inputType="textCapCharacters"
        android:padding="@dimen/width_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <com.rey.material.widget.CheckBox
        android:id="@+id/cb_offline_search"
        style="@style/Material.Drawable.CheckBox"
        app:cbd_strokeColor="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/width_margin_top"
        android:checked="false"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/search_off_line"
        android:textColor="@color/primary" />

    <com.rey.material.widget.Button
        android:id="@+id/btn_plate_search"
        style="@style/Material.Drawable.Ripple.Wave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green"
        android:drawableStart="@drawable/ic_send"
        android:drawablePadding="@dimen/width_padding"
        android:gravity="start|center_vertical"
        android:padding="@dimen/width_padding"
        android:text="@string/btn_search_fragment"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
</LinearLayout>
