<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:background="?attr/colorPrimary"
    android:padding="0dip" >

    <ImageButton
        android:id="@+id/im_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_back_background"
        android:contentDescription="@string/login_two"
        android:padding="@dimen/width_margin_8"
        android:src="@drawable/btn_back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_left_tab_titulo"
        android:layout_centerVertical="true"
        android:text="@string/list_plate_consulted"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/im_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/im_btn_back"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/im_btn_back"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/width_margin_8"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:padding="@dimen/width_padding"
        android:src="@drawable/btn_delete" />

</RelativeLayout>